@@ -381,7 +381,7 @@ public class VersionTest extends AbstractVersionTest {
     @Test
     void testCompareUuidVersionStringStream() {
         // this operation below fails with IAEx if comparison is unstable
-        uuidVersionStringStream().map(this::newVersion).sorted().collect(toList());
+        uuidVersionStringStream().map(this::newVersion).sorted().toList();
     }
 
     private Stream<String> uuidVersionStringStream() {
